ue1->ue3/ue4: much better texture alignment